# datalog-cpp

./: Doxyfile  Makefile  README.md  _datalog_8h.html  _datalog_8h__incl.map  _datalog_8h__incl.md5  _datalog_8h_source.html  _variable_8h.html  _variable_8h__dep__incl.map  _variable_8h__dep__incl.md5  _variable_8h__incl.map  _variable_8h__incl.md5  _variable_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_14.map  inherit_graph_14.md5  inherit_graph_15.map  inherit_graph_15.md5  (+82 more)
.github/workflows/: codeql-analysis.yml  linux_check.yml
docs/: build.md  git-how-to.md
make/: generic.mk
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+26 more)
src/: CMakeLists.txt  Datalog.h  Variable.h  tuple_binding.h  tuple_hash.h
tests/: a.txt  check.txt  in.txt  run_tests.sh  tuple_binding_test.cpp  types_test.cpp  variable_test.cpp
